apps/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-app-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: sandbox-app.prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sandbox-app
                port:
                  number: 80
